# OpenScope

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  vcpkg.json
cmake/: build_helper.cmake  install.cmake  msvc.cmake
lib/libdwarf/: 0001-fix-cmakelists.patch  CMakeLists.txt
lib/libopenscope/: CMakeLists.txt  openocd.cpp  platform_windows.cpp
lib/libopenscope/cmake/: corrosion_cxx.cmake
lib/libopenscope/inc/lib/: event.hpp  fts_fuzzy_match.h  openocd.h  platform.h  probe.h
lib/libopenscope/src/: event.cpp  fs.cpp  platform_linux.cpp  platform_windows.cpp  probe.cpp
lib/libopenscope/src/probe_rust/: Cargo.toml
lib/libopenscope/src/probe_rust/src/: lib.rs
res/: OpenScope-icon.ai
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  fs.cpp  openocd.cpp  platform.cpp
src/lib/inc/lib/: event.hpp  fs.h  fts_fuzzy_match.h  openocd.h  platform.h
src/widget/: CMakeLists.txt  console.cpp  filter_combo.cpp  popup.cpp  rtt_viewer.cpp  sidebar.cpp  symbol_table.cpp  widget.cpp
src/widget/inc/font/: IconsFontAwesome5.h  fa5-regular-400.h  fa5-solid-900.h
src/widget/inc/widget/: console.h  filter_combo.h  popup.h  rtt_viewer.h  sidebar.h  symbol_table.h  widget.h
src/window/: window.cpp
src/window/inc/font/: OpenSans-Regular.hpp
src/window/inc/window/: window.h
test/: CMakeLists.txt  test_event.cpp  test_file_dialog.cpp  test_list_directory.cpp  test_openocd.cpp
