[package]
name = "probe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.13"
probe-rs-rtt = "0.13"
gimli = "0.26"

[dependencies.cxx]
version = "1.0"
default-features = false
features = ["std", "c++17"]

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
